Resolves: fdo#32236# #i115825# Regression in wmf text rendering

Regression in rendering chunks out of multipart text lines
(cherry picked from commit c512e7f3bc299f57dc2500c21e0f81f5a2072e80)